--- a/app/views/pins/_form.html.haml
+++ b/app/views/pins/_form.html.haml
@@ -9,9 +9,12 @@
         %li= msg
 
   .form-group
+    =f.input :image,input_html: {class: 'form-control' }
+
+  .form-group
     =f.input :title,input_html: {class: 'form-control' }
 
-    .form-group
+  .form-group
     =f.input :description,input_html: {class: 'form-control' }
 
-    =f.button :submit,class: "btn btn-primary"
+  =f.button :submit,class: "btn btn-primary"
