--- a/app/views/pins/edit.html.haml
+++ b/app/views/pins/edit.html.haml
@@ -1,7 +1,10 @@
 .col-md-6.col-md-offset-3
-  %h1 Edit Pin
-  %p
-  =image_tag @pin.image.url(:medium)
-  = render 'form'
-
-  =link_to "Cancel",pin_path
+  .row
+    .panel.panel-default
+      .panel-heading
+        %h1 Edit Pin
+      .panel-body
+        %strong.center Current Image
+        %br/
+        = image_tag @pin.image.url(:medium)
+        = render 'form'
